ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef PCHAR (*OnGetChaveCallback) (void);


typedef struct
{
	char NOME_ARQUIVO[51];
	char MD5[33];
} TECFArquivo;


typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;


typedef void (*VerificarRecomporNumSerieCallback) (PCHAR NumSerie,double ValorGT,int *CRO,int *CNI);


typedef double (*VerificarRecomporValorGTCallback) (PCHAR NumSerie);

DllImport int AAC_Create(INTPTR* aacHandle);

DllImport int AAC_Destroy(INTPTR* aacHandle);

DllImport int AAC_GetArqLOG(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetCriarBAK(const INTPTR aacHandle);

DllImport int AAC_GetEfetuarFlush(const INTPTR aacHandle);

DllImport int AAC_GetGravarConfigApp(const INTPTR aacHandle);

DllImport int AAC_GetGravarDadosPAF(const INTPTR aacHandle);

DllImport int AAC_GetGravarDadosSH(const INTPTR aacHandle);

DllImport int AAC_GetGravarTodosECFs(const INTPTR aacHandle);

DllImport int AAC_GetUltimoErro(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_SetArqLOG(const INTPTR aacHandle, const PCHAR arqLog);

DllImport int AAC_SetCriarBAK(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetEfetuarFlush(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarConfigApp(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarDadosPAF(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarDadosSH(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarTodosECFs(const INTPTR aacHandle, const BOOL value);