ACBrFramework/ACBrAACDll.pas

unit ACBrAACDLL;

interface

uses
  SysUtils,
  Classes,
  ACBrPAFClass,
  ACBrAAC,
  ACBrUtil;

{ Ponteiros de função }
type TAntesArquivoCallback = function () : Boolean; cdecl;
type TNoArgumentsCallback = procedure(); cdecl;
type TCryptCallback = function(value : PChar) : PChar; cdecl;
type TGetChaveCallback = function () : PChar; cdecl;
type TVerificarRecomporNumSerieCallback = procedure(const NumSerie: String; const ValorGT: Double; var CRO, CNI: Integer); cdecl;
type TVerificarRecomporValorGTCallback = function(value : PChar) : Double; cdecl;

{Classe para armazenar EventHandlers do componente }
type TEventHandlers = class

     ChaveCriptografia : String;

     OnAntesAbrirArquivoCallback : TAntesArquivoCallback;
     OnAntesGravarArquivoCallback : TAntesArquivoCallback;
     OnCryptCallback : TCryptCallback;
     OnDeCryptCallback : TCryptCallback;
     OnDepoisAbrirArquivoCallback : TNoArgumentsCallback;
     OnDepoisGravarArquivoCallback : TNoArgumentsCallback;
     OnGetChaveCallback : TGetChaveCallback;
     VerificarRecomporNumSerieCallback : TVerificarRecomporNumSerieCallback;
     VerificarRecomporValorGTCallback :  TVerificarRecomporValorGTCallback;

     procedure OnAntesAbrirArquivo(var Continua : Boolean);
     procedure OnAntesGravarArquivo(var Continua : Boolean);
     procedure OnCrypt(ConteudoArquivo: AnsiString; var Resposta: AnsiString);
     procedure OnDeCrypt(ConteudoCriptografado: AnsiString; var Resposta: AnsiString);
     procedure OnDepoisAbrirArquivo(Sender : TObject);
     procedure OnDepoisGravarArquivo(Sender: TObject);
     procedure OnGetChave(var Chave: AnsiString);
     procedure VerificarRecomporNumSerie(const NumSerie: String; const ValorGT: Double; var CRO: Integer; var CNI: Integer);
     procedure VerificarRecomporValorGT(const NumSerie: String; var ValorGT: Double);
end;

{Handle para o componente TACBrAAC}
type TAACHandle = record
  UltimoErro : String;
  AAC : TACBrAAC;
  EventHandlers : TEventHandlers;
end;

{Ponteiro para o Handle }
type PAACHandle = ^TAACHandle;

{Records estilo C utilizados nos retornos das funções}

type TECFAutorizado = record
     ValorGT : double;
     Serie :  array[0..30] of char;
     CNI : integer;
     CRO : integer;
     DtHrAtualizado : double;
end;

type TECFArquivo = record
     NOME_ARQUIVO : array[0..50] of char;
     MD5          : array[0..32] of char;
end;

implementation

{%region Constructor/Destructor/Erro}
{
PADRONIZAÇÃO DAS FUNÇÕES:

        PARÂMETROS:
        Todas as funções recebem o parâmetro "handle" que é o ponteiro
        para o componente instanciado; Este ponteiro deve ser armazenado
        pela aplicação que utiliza a DLL;

        RETORNO:
        Todas as funções da biblioteca retornam um Integer com as possíveis Respostas:

                MAIOR OU IGUAL A ZERO: SUCESSO
                Outos retornos maior que zero indicam sucesso, com valor específico de cada função.

                MENOR QUE ZERO: ERROS

                  -1 : Erro ao executar;
                       Vide UltimoErro

                  -2 : ACBr não inicializado.

                  Outros retornos negativos indicam erro específico de cada função;

                  A função "UltimoErro" retornará a mensagem da última exception disparada pelo componente.
}


{
CRIA um novo componente TACBrAAC retornando o ponteiro para o objeto criado.
Este ponteiro deve ser armazenado pela aplicação que utiliza a DLL e informado
em todas as chamadas de função relativas ao TACBrAAC
}
Function AAC_Create(var aacHandle: PAACHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  try
     New(aacHandle);
     aacHandle^.AAC := TACBrAAC.Create(nil);
     aacHandle^.EventHandlers := TEventHandlers.Create();
     aacHandle^.UltimoErro := '';
     Result := 0;
  except
     on exception : Exception do
     begin
        Result := -1;
        aacHandle^.UltimoErro := exception.Message;
     end
  end;

end;

{
DESTRÓI o objeto TACBrAAC e libera a memória utilizada.
Esta função deve SEMPRE ser chamada pela aplicação que utiliza a DLL
quando o componente não mais for utilizado.
}
Function AAC_Destroy(var aacHandle: PAACHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try

    aacHandle^.AAC.Destroy;
    aacHandle^.AAC := nil;

    Dispose(aacHandle);
    aacHandle := nil;
    Result := 0;

  except
     on exception : Exception do
     begin
        Result := -1;
        aacHandle^.UltimoErro := exception.Message;
     end
  end;

end;

Function AAC_GetUltimoErro(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  try
     StrPLCopy(Buffer, aacHandle^.UltimoErro, BufferLen);
     Result := length(aacHandle^.UltimoErro);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

{%endregion}

{%region Propriedades do AAC}

Function AAC_GetArqLOG(const aacHandle: PAACHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.ArqLOG;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetArqLOG(const aacHandle: PAACHandle; const ArqLOG : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.ArqLOG := ArqLOG;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetCriarBAK(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.CriarBAK then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetCriarBAK(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.CriarBAK := value;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetEfetuarFlush(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.EfetuarFlush then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetEfetuarFlush(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.EfetuarFlush := value;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_GetGravarConfigApp(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.GravarConfigApp then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_SetGravarConfigApp(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.GravarConfigApp := value;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_GetGravarDadosPAF(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.GravarDadosPAF then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_SetGravarDadosPAF(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.GravarDadosPAF := value;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_GetGravarDadosSH(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.GravarDadosSH then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_SetGravarDadosSH(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.GravarDadosSH := value;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_GetGravarTodosECFs(const aacHandle: PAACHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if aacHandle^.AAC.GravarTodosECFs then
       Result := 1
     else
       Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function AAC_SetGravarTodosECFs(const aacHandle: PAACHandle; const value : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin
